# honor-code

./: README.md
software/github/: copilot-instructions.md
software/python/: precommit_config.yaml  pyproject.toml  repo_facelift.md  tox.ini
software/python/devtools/: pyright_pyproject.toml  ruff_pyproject.toml
software/python/envs/: create_uv_venv.sh
software/python/github/: copilot-instructions.md
software/python/github/workflows/: ci.yml  tox.yml
software/python/repos/: facelift.md
